--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <script src="app.js"></script>
-    <script src="singlylinklist.js"></script>
+    <script src="dblinklist.js"></script>
   </body>
 </html>
